[NWPS-1003] - Fixed logo issue on mobile with menu button z-index

--- a/app/assets/scaffolding/header/_header.scss
+++ b/app/assets/scaffolding/header/_header.scss
@@ -9,6 +9,7 @@
 .nhsuk-header__content {
   float:right;
   margin: -48px 0 0 0;
+  z-index: 10;
 
   @include mq($from: desktop) {
     margin: 0;
